--- a/src/input.css
+++ b/src/input.css
@@ -27,3 +27,8 @@ body {
 .hamburger-active > span:nth-child(2) {
     @apply scale-0;
 }
+
+#map {
+    height: 400px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
+  }
